<resources>
    <string name="app_name">Duties Manager</string>
    <string name="title_activity_main">MainActivity</string>


    <string name="action_settings">Settings</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>


    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_my_tasks">Moje zadania</string>
    <string name="nav_free_tasks">Wolne zadania</string>
    <string name="nav_logout">Wyloguj się</string>



    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Moje zadania</item>
        <item>Wolne zadania</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="remain_time">Pozostało</string>
    <string name="task_owner">Odpowiedzialny:</string>
    <string name="task_description">Opis zadania:</string>
    <string name="title_activity_new_task">NewTaskActivity</string>
    <string name="new_task_title">Dodaj nowe zadanie</string>
    <string name="new_task_title_hint">Wpisz nazwę zadania</string>
    <string name="new_task_descr_hint">Opisz zadanie</string>
    <string name="btn_deadline">Ustaw deadline</string>
    <string name="check_is_done">Zadanie zostało wykonane</string>
    <string name="check_do_it">Wykonam to zadanie</string>
    <string name="text_see_details">Zobacz szczegóły</string>
    <string name="pref_user_id">userId</string>
    <string name="pref_flat_id">flatId</string>
    <string name="pref_last_sync_task">lastSyncTask</string>
    <string name="pref_last_sync_friend">lastSyncFriend</string>


    <string name="hint_email">Email</string>
    <string name="hint_password">Hasło</string>
    <string name="hint_name">Imię i nazwisko</string>
    <string name="btn_login">Zaloguj się</string>
    <string name="btn_register">Zarejestruj się</string>
    <string name="btn_link_to_register">Nie masz konta? Zarejestruj się teraz.</string>
    <string name="btn_link_to_login">Jesteś już zarejestrowany! Zaloguj się.</string>
    <string name="welcome">Witaj</string>
    <string name="btn_logout">Wyloguj się</string>
    <string name="name">Imię i nazwisko</string>
    <string name="hint_address">Adres</string>
    <string name="pref_user_is_logged_in">userIsLoggedin</string>
    <string name="pref_flat_is_logged_in">flatIsLoggedIn</string>
    <string name="btn_flat_link_to_register">Zarejestruj mieszkanie.</string>
    <string name="empty_list">Brak zadań do wyświetlenia</string>
    <string name="enter_flat_details">Please enter flat details!</string>
    <string name="enter_credentials">Proszę wypełnić wszystkie pola</string>
    <string name="task_no_owner">Nie przypisano</string>
    <string name="unknown_owner">Nieznany właściciel</string>
</resources>
