<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_new_task"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.dreamsfactory.dutiesmanager.activities.NewTaskActivity"
    tools:showIn="@layout/activity_new_task"
    android:orientation="vertical">

    <TextView
        android:text="@string/new_task_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        android:gravity="center_horizontal" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_task_title_hint"
            android:id="@+id/newTaskTitleEditText"
            android:inputType="text|textCapSentences" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_task_descr_hint"
            android:id="@+id/newTaskDescriptionEditText"
            android:inputType="text|textCapSentences" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:text="@string/btn_deadline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/setDeadlineButton" />

    <TextView
        android:text="TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/newTaskDeadlineTextView"
        android:gravity="center_horizontal"
        android:textStyle="normal|bold" />

</LinearLayout>
