<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dreamsfactory.dutiesmanager.fragments.TaskDetailsFragment"
    android:orientation="vertical"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:scrollbars="vertical">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:text="TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/taskTitle"
        android:gravity="center_horizontal"
        android:textSize="18sp"
        android:textStyle="normal|bold" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="1"
        android:useDefaultMargins="true">

        <TextView
            android:text="@string/remain_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="0" />

        <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/taskTime"
            android:layout_column="1"
            android:layout_row="0"
            android:layout_gravity="right" />
    </GridLayout>

    <TextView
        android:text="@string/task_owner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/taskOwnerText"
        android:textStyle="normal|bold"
        android:visibility="invisible" />

    <TextView
        android:text="TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/taskOwnerName"
        android:visibility="invisible" />

    <TextView
        android:text="@string/task_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="normal|bold" />

    <TextView
        android:text="TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/taskDescription" />
</LinearLayout>
